# bookstore-

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
bookstore/: settings.py  urls.py  views.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
