[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Denis Oliveira <denisdev3loper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
factory-boy = "^3.3.0"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.1"
django-debug-toolbar = "^4.3.0"
psycopg2 = "^2.9.9"
gitpython = "^3.1.43"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
